k8s/restaurant-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-pdv-bms-restaurant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ms-pdv-bms-restaurant
  template:
    metadata:
      labels:
        app: ms-pdv-bms-restaurant
    spec:
      automountServiceAccountToken: false  # ✔ Desabilita automount por segurança
      containers:
        - name: ms-pdv-bms-restaurant
          image: juniomenchik/ms-pdv-bms-restaurant:0.0.1
          imagePullPolicy: Always
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: restaurant-storage
              mountPath: /app/data  # Caminho onde o volume será montado
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 10
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 10
            failureThreshold: 3
      volumes:
        - name: restaurant-storage
          persistentVolumeClaim:
            claimName: restaurant-pvc  # ✔ Nome do PVC definido separadamente
