k8s/mysql-service.yaml
# k8s/mysql-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
      targetPort: 3306
      nodePort: 30306  # Porta exposta no host (escolha entre 30000–32767)
  type: NodePort
