k8s/global-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: global-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: menchitech.backend.restaurant.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ms-pdv-bms-restaurant
                port:
                  number: 8080
